# mlops-workshop

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
data/: .gitignore  apple_types.parquet.dvc  emails.parquet.dvc
honeycrisp/: buy_apples.py  core.py  make_labels.py  print_graph.py
notebooks/: apples.ipynb
